--- a/posts/1.1.pre_llm.md
+++ b/posts/1.1.pre_llm.md
@@ -824,6 +824,11 @@ similarities = cos_sim(embeddings[0], embeddings[1:])
 
 [https://github.com/facebookresearch/mexma](https://github.com/facebookresearch/mexma)
 
+#### ModernBert
+
+[时隔6年，谷歌BERT终于有替代品了！更快更准更长，还不炒作GenAI](https://mp.weixin.qq.com/s/QDtl2Q_BHdL1PZw5wCUBaw)
+
+[Smarter, Better, Faster, Longer: A Modern Bidirectional Encoder for Fast, Memory Efficient, and Long Context Finetuning and Inference](https://arxiv.org/pdf/2412.13663)
 
 ## 更小的BERT
 
