--- a/posts/1.5.llm_alignment.md
+++ b/posts/1.5.llm_alignment.md
@@ -419,6 +419,8 @@ Old Logprobs是一次性一个batch的数据计算的，这是因为在一个bat
 
 [AI Alignment: A Comprehensive Survey](https://alignmentsurvey.com/uploads/AI-Alignment-A-Comprehensive-Survey.pdf)
 
+[老婆饼里没有老婆，RLHF里也没有真正的RL](https://mp.weixin.qq.com/s/dVCD0crxwCThE7-XVvoemg)
+
 ## DPO
 
 [Direct preference optimization: Your language model is secretly a reward model](https://arxiv.org/pdf/2305.18290)
