--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1845,6 +1845,9 @@ meta发的[LLM-Rec: Personalized Recommendation via Prompting Large Language Mod
 
 [Collaborative Cross-modal Fusion with Large Language Model for Recommendation](https://arxiv.org/pdf/2408.08564)
 
+(toread)
+
+[生成式推荐最新进展](https://mp.weixin.qq.com/s/IXXMl74ZYpZMINNzFYC8Bg) 25年1月8号写的
 
 ## 小结
 
