--- a/posts/1.3.llm_archs.md
+++ b/posts/1.3.llm_archs.md
@@ -672,6 +672,8 @@ As an example, for the 13B parameter OPT model, the KV cache of a single token d
 
 对比sglang/trt-llm：[https://blog.vllm.ai/2024/09/05/perf-update.html](https://blog.vllm.ai/2024/09/05/perf-update.html)，看着和trt-llm差不多，sglang更菜
 
+[我与vLLM的2024：清华大佬的vLLM开发之路](https://mp.weixin.qq.com/s/9WW4894LBIq72ormhlMJmA)
+
 ## 并行推理方法
 
 [Efficiently scaling transformer inference](https://arxiv.org/pdf/2211.05102.pdf)
