--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1170,14 +1170,7 @@ $$
 ![](../assets/agent4ranking-rank.png)
 
 
-## 微软的RecExplainer
-
-[RecExplainer: Aligning Large Language Models for Explaining Recommendation Models](https://arxiv.org/pdf/2311.10947)
-
-[https://github.com/microsoft/RecAI](https://github.com/microsoft/RecAI)
-
-
-## 小红书的NoteLLM
+## 小红书的NoteLLM（落地）
 
 [WWW'24 | 小红书NoteLLM: 大语言模型用于I2I笔记推荐](https://mp.weixin.qq.com/s/jcj4jKaEIg-L264uZgYuAw)
 
@@ -1185,9 +1178,9 @@ $$
 
 3个任务：
 
-+ I2I笔记推荐任务: 给定目标笔记,基于LLM从内容池中找出top-k个相似笔记。
-+ 主题标签生成任务:基于笔记的标题和笔记的内容, 使用LLM生成对应的k个主题标签。
-+ 类目生成任务:基于笔记的标题,内容,主题标签使用LLM生成对应的类目。
++ I2I笔记推荐任务: 给定目标笔记，基于LLM从内容池中找出top-k个相似笔记
++ 主题标签生成任务：基于笔记的标题和内容, 用LLM生成对应的k个主题标签。
++ 类目生成任务：基于笔记的标题、内容、主题标签，用LLM生成对应的类目。
 
 笔记压缩prompt：
 
@@ -1230,6 +1223,16 @@ $$
 L=\frac{L_{c l}+\alpha L_{g e n}}{1+\alpha},
 $$
 
+## 小红书的NoteLLM-2（落地） KDD25
+
+[小红书 NoteLLM-2：用于推荐的多模态表征](https://mp.weixin.qq.com/s/kVLHdFdHXGVsDbLQJrDTXQ)
+
+
+## 微软的RecExplainer
+
+[RecExplainer: Aligning Large Language Models for Explaining Recommendation Models](https://arxiv.org/pdf/2311.10947)
+
+[https://github.com/microsoft/RecAI](https://github.com/microsoft/RecAI)
 
 
 ## 快手的LLM-CF
