--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1188,7 +1188,7 @@ $$
 [bos]<instruction><input notes>The compression word is:"[EMB]".<output guidance><output>[eos]
 ```
 
-其中的[EMB]是一个特殊token，
+其中的[EMB]是一个特殊token，类比bert里的[CLS]
 
 ![notellm](../assets/notellm.png)
 
