--- a/posts/1.5.llm_alignment.md
+++ b/posts/1.5.llm_alignment.md
@@ -352,36 +352,36 @@ ref_logprobs, _, _, _ = self.batched_forward_pass(self.ref_model, queries,
 Old Logprobs是一次性一个batch的数据计算的，这是因为在一个batch中旧策略都是不变的；而New Logprobs是一个mini batch计算一次，这是因为新策略每个mini batch变一次。
 
 
-### 开源rlhf库
+# 开源rlhf库
 
 [https://iclr-blog-track.github.io/2022/03/25/ppo-implementation-details/](https://iclr-blog-track.github.io/2022/03/25/ppo-implementation-details/)
 
 [影响PPO算法性能的10个关键技巧（附PPO算法简洁Pytorch实现）](https://zhuanlan.zhihu.com/p/512327050)
 
-#### openai的lm-human-preferences(gpt2的finetune)
-
-&nbsp;
+## openai的lm-human-preferences(gpt2的finetune)
 
 [https://github.com/openai/lm-human-preferences](https://github.com/openai/lm-human-preferences)
 
-#### huggingface的TRL
-
-&nbsp;
+## huggingface的TRL（一直在更新，stars最多）
 
 [https://github.com/huggingface/trl](https://github.com/huggingface/trl)
- 
 
-#### CarperAI的trlx
+### 数据集介绍
 
 &nbsp;
+
+[https://huggingface.co/docs/trl/dataset_formats#which-dataset-type-to-use](https://huggingface.co/docs/trl/dataset_formats#which-dataset-type-to-use)
+ 
+
+## CarperAI的trlx(不更新了)
 
 [https://github.com/CarperAI/trlx](https://github.com/CarperAI/trlx)
 
-#### allenai的RL4LMs
+## allenai的RL4LMs
 
 [https://github.com/allenai/RL4LMs](https://github.com/allenai/RL4LMs)
 
-#### RLHF workflow
+## RLHF workflow
 
 [仅靠开源数据复刻出LLaMA3指令学习效果，在线迭代RLHF全流程解决方案来了](https://mp.weixin.qq.com/s/bRxdSCCPIrgNBgtDfyzhAA)
 
@@ -394,7 +394,7 @@ Old Logprobs是一次性一个batch的数据计算的，这是因为在一个bat
 + [https://github.com/RLHFlow/RLHF-Reward-Modeling](https://github.com/RLHFlow/RLHF-Reward-Modeling)
 + [https://github.com/RLHFlow/Online-RLHF](https://github.com/RLHFlow/Online-RLHF)
 
-#### openrlhf
+## openrlhf
 
 [这个团队做了OpenAI没Open的技术，开源OpenRLHF让对齐大模型超简单](https://mp.weixin.qq.com/s/3JjnGXJTqqiLP9hC21THIg)
 
