--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -621,6 +621,39 @@ with the answer. The reasoning process and answer are enclosed within <think> </
 
 ## DeepSeek-R1
 
+2个目标：
+
++ 用一小部分高质量数据来做冷启能否提升推理效果，或者加速收敛？
++ 如何训练一个user-friendly的模型，既能提供准确和连贯的CoT，又有很强的通用能力？
+
+### 冷启
+
+&nbsp;
+
+从base model开始RL训练时，为了防止冷启阶段训练的不稳定，构建了少量（数千）的长CoT数据来finetune模型，作为初始的RL actor。试了几种方法
+
++ few shot prompting，用一个long CoT作为例子
++ 直接在prompt里要求模型生成详细的答案，并加上反思和验证
++ 收集deepseek-r1-zero的输出，并找人类标注员后处理进行修改
+
+相比zero，冷启数据有如下好处：
+
++ 可读性：zero的可读性不太好，例如语言混合、缺少markdown高亮。因此设计了一个可读性比较好的pattern，即```|special_token|<reasoning_process>|special_token|<summary>```，并把没有summary的结果扔掉
++ 潜力：依据人类先验精心设计的pattern产出的冷启数据，取得了比zero更好的效果，故迭代地训练对于reasoning models应该是一种更好的方式
+
+### Reasoning-oriented Reinforcement Learning
+
+&nbsp;
+
+
+### Rejection Sampling and Supervised Fine-Tuning
+
+&nbsp;
+
+
+### Reinforcement Learning for all Scenarios
+
+&nbsp;
 
 
 ## 蒸馏
