--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -667,10 +667,28 @@ with the answer. The reasoning process and answer are enclosed within <think> </
 
 &nbsp;
 
+将reward信号和多样化的数据分布相结合，提升helpfulness and harmlessness，同时refine reasoning能力，
+
++ reasoning数据：用R1-Zero的RL，使用rule-based reward
++ 通用数据：用V3的pipeline，还是用reward model，用以学习复杂和细分领域的人类偏好
+
+另外，提升如下两方面的能力：
+
++ helpfulness：仅关注最终的summary，保证评估强调的是response的有用性和相关性，而尽量少地干涉潜在的reasoning过程
++ harmlessness：同时评估reasoning过程和summary，尽量缓解在生成的过程中出现的风险、偏见和有害内容
+
 
 ## 蒸馏
 
+基于Qwen2.5-Math-1.5B、Qwen2.5-Math-7B、Qwen2.5-14B、Qwen2.5-32B、Llama-3.1-8B、Llama-3.3-70B-Instruct蒸馏，用的数据集是deepseek-R1的第二阶段RL使用的80w数据，只进行了SFT，没有RL。理论上RL应该会效果更好，留给其他研究者去搞了。
+
 [https://medium.com/@prabhudev.guntur/how-to-distill-deepseek-r1-a-comprehensive-guide-c8ba04e2c28c](https://medium.com/@prabhudev.guntur/how-to-distill-deepseek-r1-a-comprehensive-guide-c8ba04e2c28c)可以参考这个自己蒸馏一个
+
+## 小结
+
+![](../assets/deepseek-r1-flow.png)
+
+对应的流程图[文档](https://s6alnvgc88.feishu.cn/wiki/JOutwfyGwiEAflkKImvcfpwgnQd)
 
 
 # open-r1
