--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -3076,6 +3076,10 @@ $$
 + 32B：最受开发者期待的「性价比之王」，可在性能和功耗之间获得最佳平衡
 + Qwen2.5-32B的整体表现甚至超越了Qwen2-72B。
 
+[阿里除夕发布Qwen2.5-Max反超DeepSeek V3，一句话开发小游戏](https://mp.weixin.qq.com/s/4gf6qQXDlq0fc3rGkzJj2g)
+
+Qwen2.5-Max同DeepSeek V3一样是超大规模的MoE模型，
+
 ### DeepSeek-V2
 
 [一块钱100万token，超强MoE模型开源，性能直逼GPT-4-Turbo](https://mp.weixin.qq.com/s/tAA8XUbU__9FgvEvXxsykw)
@@ -3090,7 +3094,7 @@ $$
 
 [](https://mp.weixin.qq.com/s/q-CZWNrcka6ttLuDW_1itg)
 
-#### DeepSeek-Prover-V1.5
+### DeepSeek-Prover-V1.5
 
 [DeepSeek开源数学大模型，高中、大学定理证明新SOTA](https://mp.weixin.qq.com/s/q-CZWNrcka6ttLuDW_1itg)
 
@@ -3098,9 +3102,11 @@ $$
 
 [https://github.com/deepseek-ai/DeepSeek-Prover-V1.5](https://github.com/deepseek-ai/DeepSeek-Prover-V1.5)
 
-#### Deepseek-v3
+### Deepseek-v3
 
 (toread)
+
+[4篇DeepSeek神作论文速读，屠龙少年的名言：You play the game I play the rule.](https://mp.weixin.qq.com/s/AxwK_gtWQfxzT9aqPaVRGw)
 
 [DeepSeek-V3 正式发布](https://mp.weixin.qq.com/s/iFZOQsUNkpkXPDvOkE99wQ)
 
@@ -3113,6 +3119,10 @@ $$
 [Deepseek V3 预训练策略解读](https://mp.weixin.qq.com/s/TzaaOOwe32V1IXxiLwcKGw)
 
 [MiniMax-01 与 DeepSeek-V3 对比](https://mp.weixin.qq.com/s/x7sN0RwaJjzxHiAReslSRQ)
+
+[DeepSeek绕开CUDA垄断，V3论文细节再挖出！英伟达护城河不存在了？](https://mp.weixin.qq.com/s/t4VTGX7fMTFpur8F91fvjQ)
+
+直接写PTX（并行线程执行），PTX是专门为其GPU设计的中间指令集架构，位于高级GPU编程语言（如CUDA C/C++或其他语言前端）和低级机器代码（流处理汇编或SASS）之间。PTX是一种接近底层的指令集架构，将GPU呈现为数据并行计算设备，因此能够实现寄存器分配、线程/线程束级别调整等细粒度优化，这些是CUDA C/C++等语言无法实现的
 
 ### FALCON 2
 
