--- a/posts/1.9.llm_others.md
+++ b/posts/1.9.llm_others.md
@@ -1033,7 +1033,12 @@ influxdb
 
 [https://jasper-zhang1.gitbooks.io/influxdb/content/Introduction/getting_start.html](https://jasper-zhang1.gitbooks.io/influxdb/content/Introduction/getting_start.html)
 
+
 ## 其他
+
+[原来，这些顶级大模型都是蒸馏的](https://mp.weixin.qq.com/s/GdwH7jxK2T_Vhus2ZvwQbw)
+
+[Distillation Quantification for Large Language Models](https://arxiv.org/abs/2501.12619)
 
 [小模型性能饱和、表现不佳，根源是因为Softmax?](https://mp.weixin.qq.com/s/bvv-frM8bKhkZiqOa9nqDA)
 
