--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -578,24 +578,23 @@ $$
 对比PPO & GRPO
 
 + PPO：
-  + reference model：原始LLM，不训练
-  + policy model(actor)：base llm，需要训练
-    + policy：一条llm的回复；
-    + action：llm生成的每个token
-  + reward model：对一条完整的回复（一个policy）打分。可以是一个model，也可以是人（rlhf）
-  + value model(critic)：类似reward model，需要训练
-  + advantage function：reward model对整个policy有打分之后，结合**ref model**和**value model**，进行**GAE**，得到每个动作(token)的advantage。(即，从**整个句子**的打分，拆解到每个**token**应该怎么改进)
-  + importance sampling：对比新advantage和原始policy的比值，只对advantage进行小比例更新，保证训练稳定
-  + 梯度更新：更新policy模型和value model
+  + Reference Model（Ref model）：原始LLM，不训练
+  + Policy Model（Actor）：原始LLM，需要训练
+    + policy：LLM产出的一条response；
+    + action：LLM生成的每一个token
+  + Reward Model（RM）：对一条response的打分。在RLHF的RM阶段更新，RL阶段不训练
+  + Value Model（Critic）：类似RM，需要训练
+  + GAE：从Reward Model对**整个句子**的打分，拆解到**每个token**应该怎么改进（图中的A，advantage），会考虑Value Model、Ref Model和Reward Model，还会有一个KL的约束，确保新的policy model不会离ref model太远
+  + Importance Sampling：对比新advantage和原始policy的比值，只对advantage进行小比例更新，保证训练稳定
   + 缺点：
-    + 需要ref model再算一遍，有计算量&耗时
+    + 需要Ref Model再算一遍，有计算量&耗时
     + 需要拆解到每个token，又有计算量&耗时
-+ GRPO：
-  + policy model/action/ref model都和正常rl一样
++ GRPO：（Group Relative Policy Optimization）：来自[DeepSeekMath: Pushing the Limits of Mathematical Reasoning in Open Language Models](https://arxiv.org/pdf/2402.03300)，放弃了Critic model（图中的value model），用group scores来替换。
+  + policy model/ref model/reward model都和ppo一样
   + 不需要value model
-  + 一下子执行更多的policy，产出的结果一起打分，减均值除以标准差，把每个policy和标准差的差距平均到每个token上，平均完后再用KL散度计算和ref model的差距
+  + 并行执行更多的policy（即GRPO的group），产出的结果一起打分，减均值除以标准差，把每个policy和标准差的差距平均到每个token上，再用KL散度计算和ref model的差距
 
-原始paper（[DeepSeekMath: Pushing the Limits of Mathematical Reasoning in Open Language Models](https://arxiv.org/pdf/2402.03300)）中的图：
+原始DeepSeekMath论文中的图：
 
 ![](../assets/ppo-grpo-deepseek-math.png)
 
