--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -737,6 +737,26 @@ with the answer. The reasoning process and answer are enclosed within <think> </
 
 [https://medium.com/@prabhudev.guntur/how-to-distill-deepseek-r1-a-comprehensive-guide-c8ba04e2c28c](https://medium.com/@prabhudev.guntur/how-to-distill-deepseek-r1-a-comprehensive-guide-c8ba04e2c28c)可以参考这个自己蒸馏一个
 
+## 效果
+
+R1：
+
+- 大部分都接近或者超过o1，很多任务都比v3要好，
+- 在最后一个数据集(c-simpleQA)上，说是因为有R1有safety的限制，导致模型会拒绝回答一些问题，如果去掉这个限制，准确率能达到70%
+- 在AlpacaEval2.0（写作）和ArenaHard(开放领域问答)上效果很好，产出的summary也很长，说明可能reasoning能力对这类任务也有用
+- 数学上超越o1，大幅领先v3
+- 代码和v3差不太多，SWE Verified这个工程类的不太行，未来可以优化，因为目前训练语料里这种还比较少
+
+蒸馏：
+
++ 仅sft的效果，模型越大效果越好，32b和70b的已经在大部分任务上超越o1-mini了
++ r1-zero-qwen-32b：直接拿qwen-32b做RL，和QwQ-32b-preview差不太多，但明显不如sft蒸馏的模型效果
+
+结论：
+
+1. 把大模型蒸馏到小模型可以有很好的效果，但对小模型做RL性价比并不好
+2. 有更强大的模型和更大规模的RL，才能更好地发挥蒸馏的作用，让小模型变得更强
+
 ## 失败的尝试
 
 ### PRM
