--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -36,11 +36,11 @@ CRM(conventional recommendation models)
 
 ![llm-rec-how](../assets/llm-rec-how.png)
 
-### where-LLM for feature engineering
+### where-LLM用于特征工程
 
 &nbsp;
 
-#### user-item level feature augmentation
+#### user-item level特征增强
 
 &nbsp;
 
@@ -53,7 +53,7 @@ CRM(conventional recommendation models)
 + [LLaMA-E](https://arxiv.org/pdf/2308.04913)：instruction formulating为写300个种子指令，让gpt作为teacher，对300个种子指令进行扩展，并由领域专家评估后，去重并保证质量，得到120k个指令作为训练集，再用lora去instruct tuning
 + [EcomGPT](https://arxiv.org/pdf/2308.06966v1)：设置一系列的task(100多个task)来finetune BLOOMZ，包括命名实体识别、描述生成、对话intent提取等
 
-#### instance-level sample generation
+#### instance-level样本生成
 
 &nbsp;
 
@@ -66,11 +66,23 @@ CRM(conventional recommendation models)
 + [Agent4Ranking](https://arxiv.org/pdf/2312.15450)：query重写任务，多个人群当成多个agent，每个通过多轮对话产出一个rewrite，再合在一起经过bert+mmoe计算robust损失+accuracy损失。
 
 
-### where-LLM as feature encoder
+### where-LLM作为特征编码器
 
 &nbsp;
 
-### where-LLM for scoring/ranking function
+#### 表示增强
+
+&nbsp;
+
+
+#### 统一的跨域推荐
+
+&nbsp;
+
+
+
+
+### where-LLM 用于打分函数
 
 &nbsp;
 
@@ -78,7 +90,7 @@ CRM(conventional recommendation models)
 
 [https://github.com/AaronHeee/RecFormer](https://github.com/AaronHeee/RecFormer)
 
-### where-LLM for pipeline controller
+### where-LLM用于流水线控制（pipeline controller）
 
 &nbsp;
 
