--- a/posts/1.9.llm_others.md
+++ b/posts/1.9.llm_others.md
@@ -100,6 +100,12 @@
 
 # LLM常见难题
 
+## LLM as a judge
+
+[A Survey on LLM-as-a-Judge](https://arxiv.org/pdf/2411.15594)
+
+[Learning to Plan & Reason for Evaluation with Thinking-LLM-as-a-Judge](https://arxiv.org/pdf/2501.18099)，meta的2025年1月的
+
 ## 重复生成
 
 [https://www.zhihu.com/question/616130636](https://www.zhihu.com/question/616130636)
