--- a/posts/1.3.llm_archs.md
+++ b/posts/1.3.llm_archs.md
@@ -876,3 +876,17 @@ prompt-lookup decoding：[https://github.com/apoorvumang/prompt-lookup-decoding]
 
 [告别CUDA无需Triton！Mirage零门槛生成PyTorch算子，人均GPU编程大师？](https://mp.weixin.qq.com/s/M3WFt17QErAt46VuqkFjFQ)
 
+
+# deepseek开源list
+
+## FlashMLA
+
+[“源神”DeepSeek！突破H800性能上限，FlashMLA重磅开源，算力成本还能降](https://mp.weixin.qq.com/s/OZmMTW4JyiP4GWkzShlqAg)
+
+[https://github.com/deepseek-ai/FlashMLA](https://github.com/deepseek-ai/FlashMLA)
+
+## DeepEP
+
+[DeepSeek开源第二弹，为MoE和EP量身定制的通信库！暂和英伟达显卡绑定](https://mp.weixin.qq.com/s/2ecxmq9zbwFlzOalprok0Q)
+
+[https://github.com/deepseek-ai/DeepEP](https://github.com/deepseek-ai/DeepEP)
