--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -1033,6 +1033,13 @@ bridge算法结合了优化和生成两个步骤：
 + 在优化步骤中，使用贝叶斯优化（Bayesian optimization）来发现关键示例；
 + 在生成步骤中，利用这些关键示例作为示范，重新生成更多的示例，从而在多示例学习中提高模型性能。
 
+## BFS-Prover
+
+[超越DeepSeek-ProverV1.5！豆包首个形式化数学推理模型BFS-Prover来了，直接开源](https://mp.weixin.qq.com/s/OneF2OtnYbDxeZhDzXPM4A)
+
+[BFS-Prover: Scalable Best-First Tree Search for LLM-based Automatic Theorem Proving](https://arxiv.org/abs/2502.03438)
+
+[https://huggingface.co/bytedance-research/BFS-Prover/tree/main](https://huggingface.co/bytedance-research/BFS-Prover/tree/main)
 
 ## 小结
 
