--- a/posts/1.3.llm_archs.md
+++ b/posts/1.3.llm_archs.md
@@ -890,3 +890,10 @@ prompt-lookup decoding：[https://github.com/apoorvumang/prompt-lookup-decoding]
 [DeepSeek开源第二弹，为MoE和EP量身定制的通信库！暂和英伟达显卡绑定](https://mp.weixin.qq.com/s/2ecxmq9zbwFlzOalprok0Q)
 
 [https://github.com/deepseek-ai/DeepEP](https://github.com/deepseek-ai/DeepEP)
+
+## DeepGEMM
+
+[DeepSeek-R2曝5月前上线！第三弹DeepGEMM 300行代码暴击专家优化内核](https://mp.weixin.qq.com/s/4aKxWIpb2-9DZKrSSAYoWg)
+
+[https://github.com/deepseek-ai/DeepGEMM](https://github.com/deepseek-ai/DeepGEMM)
+
