--- a/posts/1.3.llm_archs.md
+++ b/posts/1.3.llm_archs.md
@@ -897,3 +897,17 @@ prompt-lookup decoding：[https://github.com/apoorvumang/prompt-lookup-decoding]
 
 [https://github.com/deepseek-ai/DeepGEMM](https://github.com/deepseek-ai/DeepGEMM)
 
+
+## DualPipe
+
+[DeepSeek一口气开源3个项目，还有梁文锋亲自参与，昨晚API大降价](https://mp.weixin.qq.com/s/aeK5eJMwqNuqJaZczKrhgQ)
+
+[https://github.com/deepseek-ai/DualPipe](https://github.com/deepseek-ai/DualPipe)
+
+## EPLB
+
+[https://github.com/deepseek-ai/eplb](https://github.com/deepseek-ai/eplb)
+
+## profile-data
+
+[https://github.com/deepseek-ai/profile-data](https://github.com/deepseek-ai/profile-data)
