--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -1071,7 +1071,13 @@ bridge算法结合了优化和生成两个步骤：
 
 ## unsloth
 
+### 跑满血版1.58bit infer
+
 [https://unsloth.ai/blog/deepseekr1-dynamic](https://unsloth.ai/blog/deepseekr1-dynamic)
+
+### 让小模型有reasoning能力
+
+[https://unsloth.ai/blog/r1-reasoning](https://unsloth.ai/blog/r1-reasoning)
 
 
 ## Logic-RL与reinforce-lite
